--- a/coroutinesflow/src/main/AndroidManifest.xml
+++ b/coroutinesflow/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rsh_engineering.tkachenkoni.coroutinesflow">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
